--- a/.github/workflows/workflow-1.yml
+++ b/.github/workflows/workflow-1.yml
@@ -10,19 +10,32 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.8", "3.9", "3.10"]
+        python-version: ["3.8"]
     steps:
     - uses: actions/checkout@v3
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v3
       with:
         python-version: ${{ matrix.python-version }}
-        
-    - name: Trigger next workflow
-      if: success()
-      uses: peter-evans/repository-dispatch@v1
-      with:
-        token: ${{ secrets.REPO_GHA_PAT }}
-        repository: ${{ github.repository }}
-        event-type: trigger-workflow-2
-        client-payload: '{"ref": "${{ github.ref }}", "sha": "${{ github.sha }}"}'
+  
+  trigger:
+    runs-on: ubuntu-latest
+    strategy:
+        max-parallel: 4
+    steps:
+        - uses: actions/checkout@v1
+
+        - name: Set up Python 3.9
+          uses: actions/setup-python@v4
+          with:
+            python-version: '3.9'
+            cache: 'pip' 
+            
+        - name: Trigger next workflow
+          if: success()
+          uses: peter-evans/repository-dispatch@v1
+          with:
+            token: ${{ secrets.REPO_GHA_PAT }}
+            repository: ${{ github.repository }}
+            event-type: trigger-workflow-2
+            client-payload: '{"ref": "${{ github.ref }}", "sha": "${{ github.sha }}"}'
